--- a/003_Introduccion_spring_data_jpa/spring_data_jpa/src/main/resources/application.properties
+++ b/003_Introduccion_spring_data_jpa/spring_data_jpa/src/main/resources/application.properties
@@ -1,21 +1,36 @@
 spring.application.name=spring_data_jpa
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_data_jpa
-spring.datasource.username=root
-spring.datasource.password=Lampar04ñ.
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring_data_jpa?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=Lampar04ñ.
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
 #spring.jpa.init.mode=always
 #spring.jpa.defer-datasource-initialization=true
+
 
 #Postgresql
 #spring.datasource.url=jdbc:postgresql://localhost:5432/spring_data_jpa
 #spring.datasource.username=postgres
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=com.postgresql.Driver
+#spring.datasource.password=Lampar04ñ.
+#spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+
+# Configuración de la base de datos H2
+spring.datasource.url=jdbc:h2:mem:spring_data_jpa
+spring.datasource.username=root
+spring.datasource.password=Lampar04ñ.
+spring.datasource.driver-class-name=org.h2.Driver
+
+# Configuración de JPA y Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
