--- a/003_Introduccion_spring_data_jpa/spring_data_jpa/pom.xml
+++ b/003_Introduccion_spring_data_jpa/spring_data_jpa/pom.xml
@@ -36,10 +36,16 @@
 		</dependency>
 
 
-		<dependency>
+	<!--	<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+		</dependency> -->
+		<dependency>
+		<groupId>com.mysql</groupId>
+		<artifactId>mysql-connector-j</artifactId>
+			<version>8.3.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
