--- a/010_Documenta_tu_Api_Rest_con_Open_Api_3.0/spring-rest-openapi/pom.xml
+++ b/010_Documenta_tu_Api_Rest_con_Open_Api_3.0/spring-rest-openapi/pom.xml
@@ -35,12 +35,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.8.0</version>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
         </dependency>
+
 
 
         <dependency>
